--- a/citations.bib
+++ b/citations.bib
@@ -219,5 +219,35 @@ urldate = {2024-2-3},
 language     = {english}
 }
 
+@BOOK{moss,
+title="Neobvyklá Mőssbauerova spektroskopie", 
+publisher="Palacký University Olomouc", 
+author="Vít Procházka",
+location = "Olomouc",
+isbn = "9788024440118",
+language     = {czech},
+year=2014
+}
+@online{co57,
+author  = {Laboratoire National Henri Becquerel},
+title     = {Co-57},
+url       = {http://www.lnhb.fr/nuclides/Co-57_tables.pdf},
+urldate = {2024-2-3}, 
+language     = {english}
+}
 
+@online{maestro,
+author  = {ORTEC},
+title     = {MAESTRO Multichannel Analyzer Emulation Software},
+url       = {https://www.ortec-online.com/products/software/maestro-mca},
+urldate = {2024-2-3}, 
+language     = {english}
+}
 
+@online{charge,
+author  = {hamamatsu},
+title     = {Characteristics and use of Charge amplifier},
+url       = {https://www.hamamatsu.com/content/dam/hamamatsu-photonics/sites/documents/99_SALES_LIBRARY/ssd/charge_amp_kacc9001e.pdf},
+urldate = {2024-2-3}, 
+language     = {english}
+}
