--- a/gammaRays.tex
+++ b/gammaRays.tex
@@ -100,7 +100,7 @@ The photon is absorbed by electron from atomic shell. The electron is ejected an
  \end{equation}
 where $f$ is the photon frequency and $E_{b}$ is the binding energy.
  
-The Photoelectric effect can be observed only on electron bounded in atomic shell, due to the fact, that the nuclei can absorb the photon's momentum. The cross section usually falls with energy and can have characteristic peaks from K,L,M transitions.
+The Photoelectric effect can be observed only on electron bounded in atomic shell, due to the fact, that the nuclei can absorb the photon's momentum. The cross section usually falls with energy and can have characteristic peaks from K,L,M transitions. Two types of photoelectric effect can be distinguished - external and internal. External photoelectric effect results into ejecting the electron outside of the material - effect observed on photo cathodes. Internal photoelectric effect results into exciting the electron into the higher energy levels - in semiconductor it means from the valence band to the conduction band.
 
 \par
 
@@ -112,7 +112,10 @@ Compton scattering is an effect, which is mainly observed on free electrons. It 
 This effect causes, that the photon loses only a part of its energy and changes its direction. The energy is transferred to an electron accordingly to the laws of energy and momentum conservation and can be described by following relation:
 
 \begin{equation}
+\begin{aligned}
 E_{\textrm{e}} = E_1 - E_2 = E_1 (1- \frac{1}{1+\frac{E_1}{m_{\textrm{e}}c^2}(1 - \cos{\theta})})
+\end{aligned}
+\label{compton}
 \end{equation}
 
 
