--- a/citations.bib
+++ b/citations.bib
@@ -251,3 +251,10 @@ url       = {https://www.hamamatsu.com/content/dam/hamamatsu-photonics/sites/doc
 urldate = {2024-2-3}, 
 language     = {english}
 }
+@online{eagle,
+author  = {Autodesk},
+title     = {Autodesk Eagle},
+url       = {https://www.autodesk.com/products/eagle/overview?term=1-YEAR&tab=subscription},
+urldate = {2024-2-3}, 
+language     = {english}
+}
